# trip-details

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml
.github/: copilot-instructions.md
destinations/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
destinations/migrations/: 0001_initial.py  0002_add_destinationdistance_ordering.py  0003_add_model_constraints.py
templates/: base.html
templates/destinations/: trip_confirm_delete.html  trip_detail.html  trip_form.html  trip_list.html
trip_details/: asgi.py  settings.py  urls.py  wsgi.py
